# take-home

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: app.ts  index.ts
src/routes/: decrypt.ts  encrypt.ts  encryption.ts  sign.ts  signature.ts  verify.ts
src/services/: encryptionAlgorithm.ts  encryptionService.ts  signatureService.ts
src/tests/: encryption.spec.ts  sign.spec.ts  verify.spec.ts
src/tests/routes/: encryption.spec.ts  sign.spec.ts  signature.spec.ts  verify.spec.ts
src/tests/services/: encryptionService.spec.ts  signatureService.spec.ts
